--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,6 @@
     <title>Web Programming Class</title>
   </head>
   <body>
-    Hello , World
+    Hello , World! Changes from Hub
   </body>
 </html>
