--- a/hello.html
+++ b/hello.html
@@ -1,4 +1,4 @@
-<! <!DOCTYPE html>
+<! DOCTYPE html>
 <<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -6,6 +6,6 @@
     <title>Web Programming Class</title>
   </head>
   <body>
-    Hello , World! Changes from Gitbash!!
+  I am making changes here
   </body>
 </html>
